# VitalFoldSimulator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FIXES_TRACKING.md  MISTAKE_ANALYSIS.md  README.md  Sonnet.md  claude.md  claude.md.bak  health_clinic_schema.sql  project.md  synthetic_data.md
.github/workflows/: ci.yml
docs/: BUILD_HISTORY.md  CODE_REVIEW_SUMMARY.md  CODE_VALIDATION_REPORT.md  DEPRECATION_HISTORY.md  DEPRECATION_UPDATE_COMPLETION.md  DEPRECATION_UPDATE_PLAN.md  airflow-integration.md  dynamo.json  dynamo.md  frontend.md  health_clinic_schema.sql  models-spec.md  project-origins.md
docs/front/: architecture.md  components.md  implementation.md  pages.md
docs/skills/: Haiku.md
vital-fold-engine/: .env.example  API.md  ARCHITECTURE.md  Cargo.toml  DEVELOPMENT.md  DOCUMENTATION.md  INSTALLATION.md  QUICKSTART.md  README.md
vital-fold-engine/migrations/: 001_init.sql  health_clinic_schema.sql  init.sql
vital-fold-engine/src/: config.rs  engine_state.rs  errors.rs  main.rs  routes.rs
vital-fold-engine/src/db/: mod.rs  src_db_claude.md
vital-fold-engine/src/generators/: appointment.rs  clinic.rs  insurance.rs  medical_record.rs  mod.rs  patient.rs  provider.rs  rvu.rs  src_generators_claude.md  survey.rs  visit.rs
vital-fold-engine/src/handlers/: auth.rs  health.rs  mod.rs  simulation.rs  src_handlers_claude.md  user.rs
vital-fold-engine/src/middleware/: auth.rs  src_middleware_claude.md
vital-fold-engine/src/models/: appointment.rs  clinic.rs  insurance.rs  medical_record.rs  mod.rs  patient.rs  patient_visit.rs  patient_vital.rs  provider.rs  src_models_claude.md  survey.rs  user.rs
vital-fold-engine/static/: index.html
vital-fold-engine/static/css/: style.css
vital-fold-engine/static/js/: api.js  app.js
vital-fold-engine/static/js/components/: confirm-modal.js  count-table.js  date-range-form.js  dynamic-populate-form.js  heatmap.js  nav.js  populate-calendar.js  populate-form.js  status-badge.js
vital-fold-engine/static/js/pages/: dashboard.js  login.js  visitors.js
