[package]
name = "vital-fold-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8"
actix-files = "0.6"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.6", features = [
    "postgres", "runtime-tokio-rustls",
    "uuid", "chrono", "bigdecimal", "macros", "derive"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
bcrypt = "0.15"
anyhow = "1"
bigdecimal = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
fake = { version = "4", features = ["derive"] }
rand = "0.9"
dotenvy = "0.15"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"

# ─── AWS SDK ──────────────────────────────────────────────────────────────────
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-dsql = "1"
aws-sdk-dynamodb = "1"
aws-credential-types = "1"

# ─── OpenAPI / Swagger ────────────────────────────────────────────────────────
utoipa = { version = "5", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
utoipa-actix-web = "0.1"

# ─── Release Profile ────────────────────────────────────────────────────────
[profile.release]
lto = true
codegen-units = 1
strip = true
